--- a/client/package.json
+++ b/client/package.json
@@ -1,30 +1,14 @@
 {
-  "name": "snapshot-next-dashboard",
+  "name": "snapshot-api",
   "version": "1.0.0",
-  "private": true,
+  "main": "server.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "better-sqlite3": "^11.10.0",
-    "body-parser": "^2.2.0",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "debug": "^4.4.1",
-    "express": "^5.1.0",
-    "next": "^15.3.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
+    "better-sqlite3": "^8.4.0",
+    "axios": "^1.6.7"
   }
 }
