--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,12 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
-    "better-sqlite3": "^8.4.0",
-    "axios": "^1.6.7"
+    "express": "^4.18.2",
+    "next": "^15.3.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "optionalDependencies": {
     "better-sqlite3": "^8.0.1"
