--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,15 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "next": "^15.3.2",
+    "postcss": "^8.5.3",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.7"
   },
   "optionalDependencies": {
     "better-sqlite3": "^8.0.1"
