--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.7",
     "autoprefixer": "^10.4.21",
     "axios": "^1.6.7",
     "cors": "^2.8.5",
