fix: add required TypeScript dependencies

--- a/client/package.json
+++ b/client/package.json
@@ -19,5 +19,10 @@
   },
   "optionalDependencies": {
     "better-sqlite3": "^8.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^22.15.21",
+    "@types/react": "^19.1.5",
+    "typescript": "^5.8.3"
   }
 }
